fix(storybook): sufficient color contrast set in custom class button example

--- a/.storybook/custom-styles.scss
+++ b/.storybook/custom-styles.scss
@@ -3,7 +3,7 @@
 
 // Add custom styles for storybook implementation
 .custom-class {
-  background: #fa9441;
+  background: #bf5906;
 }
 
 .usa-color-text-visited {
